--- a/docs/style/attention/attention.scss
+++ b/docs/style/attention/attention.scss
@@ -46,7 +46,6 @@ html, body{
         justify-content: center;
         align-items: center;
         #scroll_frame{
-            overflow: scroll;
             width: 70%;
             height: 90%;
             padding: 10px 30px 10px 30px;
@@ -55,33 +54,42 @@ html, body{
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            #btn_frame{
-                margin: 20px;
+            #scroller{
+                overflow-y: scroll;
+                width: 100%;
+                height: 100%;
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                flex-direction: row;
-            }
-            #redo_btn{
-                cursor: pointer;
-                color: #ffffff;
-                font-size: 20px;
-                font-weight: 700;
-                width: auto;
-                height: auto;
-                padding: 10px 40px 10px 40px;
-                margin: 10px 10px 10px 10px;
-                border: none;
-                background: linear-gradient(rgb(125, 212, 215), rgb(53, 101, 191));
-                border-radius: 20px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                &:hover{
-                    background: linear-gradient(rgb(53, 101, 191), rgb(125, 212, 215));
+                flex-direction: column;
+                #btn_frame{
+                    margin: 20px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex-direction: row;
                 }
-                &:focus {
-                    outline:0;
+                #redo_btn{
+                    cursor: pointer;
+                    color: #ffffff;
+                    font-size: 20px;
+                    font-weight: 700;
+                    width: auto;
+                    height: auto;
+                    padding: 10px 40px 10px 40px;
+                    margin: 10px 10px 10px 10px;
+                    border: none;
+                    background: linear-gradient(rgb(125, 212, 215), rgb(53, 101, 191));
+                    border-radius: 20px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    &:hover{
+                        background: linear-gradient(rgb(53, 101, 191), rgb(125, 212, 215));
+                    }
+                    &:focus {
+                        outline:0;
+                    }
                 }
             }
         }
