スタイル修正

--- a/docs/style/attention/attention.css
+++ b/docs/style/attention/attention.css
@@ -1,12 +1,7 @@
-@charset "UTF-8";
-/* スクロール禁止（PC用） */
-html, body {
-  overflow: hidden;
-}
-
 #body {
   height: 100vh;
   background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+  background-size: 110% 200%;
   color: #ffffff;
 }
 
@@ -45,7 +40,7 @@ html, body {
 
 #main {
   width: 100vw;
-  height: 70vh;
+  height: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -59,7 +54,7 @@ html, body {
 
 #main #main_frame {
   width: 80%;
-  height: 90%;
+  height: auto;
   padding: 10px 30px 10px 30px;
   margin: 10px 0 10px 0;
   background: rgba(255, 255, 255, 0.25);
@@ -82,7 +77,7 @@ html, body {
 
 #main #main_frame #scroll_frame {
   width: 70%;
-  height: 90%;
+  height: auto;
   padding: 10px 30px 10px 30px;
   margin: 10px 0 10px 0;
   display: -webkit-box;
@@ -102,8 +97,8 @@ html, body {
 
 #main #main_frame #scroll_frame #scroller {
   overflow-y: scroll;
-  width: 100%;
-  height: 100%;
+  width: auto;
+  height: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -166,39 +161,6 @@ html, body {
 }
 
 #main #main_frame #scroll_frame #scroller #redo_btn:focus {
-  outline: 0;
-}
-
-.year_btn {
-  cursor: pointer;
-  color: #ffffff;
-  font-size: 20px;
-  font-weight: 700;
-  width: auto;
-  height: auto;
-  padding: 10px 40px 10px 40px;
-  margin: 10px 30px 10px 30px;
-  border: none;
-  background: -webkit-gradient(linear, left top, left bottom, from(#91d77d), to(#35bfa0));
-  background: linear-gradient(#91d77d, #35bfa0);
-  border-radius: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.year_btn:hover {
-  background: -webkit-gradient(linear, left top, left bottom, from(#35bfa0), to(#91d77d));
-  background: linear-gradient(#35bfa0, #91d77d);
-}
-
-.year_btn:focus {
   outline: 0;
 }
 
