--- a/docs/style/attention/attention.scss
+++ b/docs/style/attention/attention.scss
@@ -1,10 +1,7 @@
-/* スクロール禁止（PC用） */
-html, body{
-    overflow: hidden;
-}
 #body {
 	height: 100vh;
-	background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+    background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+    background-size: 110% 200%;
     color: #ffffff;
 }
 #header{
@@ -27,13 +24,13 @@ html, body{
 }
 #main{
     width: 100vw;
-    height: 70vh;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
     #main_frame{
         width: 80%;
-        height: 90%;
+        height: auto;
         padding: 10px 30px 10px 30px;
         margin: 10px 0 10px 0;
         background: rgba( 255, 255, 255, 0.25 );
@@ -47,7 +44,7 @@ html, body{
         align-items: center;
         #scroll_frame{
             width: 70%;
-            height: 90%;
+            height: auto;
             padding: 10px 30px 10px 30px;
             margin: 10px 0 10px 0;
             display: flex;
@@ -56,8 +53,8 @@ html, body{
             flex-direction: column;
             #scroller{
                 overflow-y: scroll;
-                width: 100%;
-                height: 100%;
+                width: auto;
+                height: auto;
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -93,28 +90,6 @@ html, body{
                 }
             }
         }
-    }
-}
-.year_btn{
-    cursor: pointer;
-    color: #ffffff;
-    font-size: 20px;
-    font-weight: 700;
-    width: auto;
-    height: auto;
-    padding: 10px 40px 10px 40px;
-    margin: 10px 30px 10px 30px;
-    border: none;
-    background: linear-gradient(rgb(145,215,125), rgb(53,191,160));
-    border-radius: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    &:hover{
-        background: linear-gradient(rgb(53,191,160), rgb(145,215,125));
-    }
-    &:focus {
-        outline:0;
     }
 }
 
