--- a/docs/style/index/index.css
+++ b/docs/style/index/index.css
@@ -1,12 +1,7 @@
-@charset "UTF-8";
-/* スクロール禁止（PC用） */
-html, body {
-  overflow: hidden;
-}
-
 #body {
   height: 100vh;
   background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+  background-size: 110% 110%;
   color: #ffffff;
 }
 
