--- a/docs/style/index/index.scss
+++ b/docs/style/index/index.scss
@@ -1,10 +1,7 @@
-/* スクロール禁止（PC用） */
-html, body{
-    overflow: hidden;
-}
 #body {
 	height: 100vh;
-	background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+    background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+    background-size: 110% 110%;
     color: #ffffff;
 }
 #header{
