--- a/docs/style/scoring/scoring.css
+++ b/docs/style/scoring/scoring.css
@@ -1,9 +1,3 @@
-@charset "UTF-8";
-/* スクロール禁止（PC用） */
-html, body {
-  overflow: hidden;
-}
-
 label {
   white-space: nowrap;
   cursor: pointer;
@@ -12,6 +6,7 @@ label {
 #body {
   height: 100vh;
   background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+  background-size: 110% 110%;
   color: #ffffff;
 }
 
