--- a/docs/style/scoring/scoring.scss
+++ b/docs/style/scoring/scoring.scss
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
 label {
     white-space: nowrap;
     cursor: pointer;
 }
 #body {
-    font-family: 'Sawarabi Mincho', sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
 	height: 100vh;
     background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
     background-size: 110% 110%;
