--- a/docs/style/scoring/scoring.css
+++ b/docs/style/scoring/scoring.css
@@ -1,18 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap");
-label {
-  white-space: nowrap;
-  cursor: pointer;
+a {
+  text-decoration: none;
+  color: #14A4AC;
+  font-size: 20px;
+  font-weight: 700;
 }
 
 #body {
   font-family: 'Noto Sans JP', sans-serif;
-  height: 100vh;
-  background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
-  background-size: 110% 110%;
-  color: #ffffff;
+  background-color: #142C44;
+  color: #F9F2E4;
 }
 
 #header {
+  margin: 25px 0 35px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -26,14 +27,10 @@ label {
 
 #header #header_frame {
   padding: 10px 30px 10px 30px;
-  margin: 10px 0 10px 0;
-  background: rgba(255, 255, 255, 0.25);
-  -webkit-box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-          box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
-  border: solid 1px rgba(255, 255, 255, 0.5);
-  border-radius: 20px;
+  border-radius: 10px;
+  background: #142C44;
+  -webkit-box-shadow: 6px 6px 12px #08121b, -6px -6px 12px #20466d;
+          box-shadow: 6px 6px 12px #08121b, -6px -6px 12px #20466d;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -45,9 +42,26 @@ label {
           align-items: center;
 }
 
+@media screen and (max-width: 480px) {
+  #header #header_frame {
+    padding: 10px 20px 10px 20px;
+  }
+}
+
+#header #header_frame #header_title {
+  width: 400px;
+  -webkit-filter: drop-shadow(0px 0px 6px rgba(0, 255, 0, 0.6));
+          filter: drop-shadow(0px 0px 6px rgba(0, 255, 0, 0.6));
+}
+
+@media screen and (max-width: 480px) {
+  #header #header_frame #header_title {
+    width: 300px;
+  }
+}
+
 #main {
-  width: 100vw;
-  height: 70vh;
+  margin: 35px 0 35px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -60,17 +74,90 @@ label {
 }
 
 #main #main_frame {
-  width: 80%;
-  height: 90%;
-  padding: 10px 30px 10px 30px;
+  width: 90%;
+  max-width: 400px;
+  border-radius: 10px;
+  background: #142C44;
+  -webkit-box-shadow: 10px 10px 15px #08121b, -10px -10px 15px #20466d;
+          box-shadow: 10px 10px 15px #08121b, -10px -10px 15px #20466d;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#main #main_frame #examin_info_frame {
+  margin-top: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#main #main_frame #examin_info_frame .examin_info {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+#main #main_frame #answer_frame {
+  margin: 10px 0 20px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#main #main_frame #answer_frame .ans_peace_frame {
   margin: 10px 0 10px 0;
-  background: rgba(255, 255, 255, 0.25);
-  -webkit-box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-          box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
-  border: solid 1px rgba(255, 255, 255, 0.5);
-  border-radius: 20px;
+  padding: 10px;
+  border-radius: 10px;
+  background: #142C44;
+  -webkit-box-shadow: inset 5px 5px 10px #08121b, inset -5px -5px 10px #20466d;
+          box-shadow: inset 5px 5px 10px #08121b, inset -5px -5px 10px #20466d;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#main #main_frame #answer_frame .ans_peace_frame .radio_frame {
+  font-weight: 700;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -86,95 +173,60 @@ label {
           flex-direction: row;
 }
 
-#answer_frame {
-  width: auto;
-  height: 95%;
-  overflow: scroll;
-  background-color: rgba(255, 255, 255, 0.6);
-  margin: 15px;
-  padding: 10px;
-  color: #000000;
-  font-size: 20px;
-  font-weight: 800;
-  border: solid 2px rgba(255, 255, 255, 0.5);
+#main #main_frame #answer_frame .ans_peace_frame .radio_frame label {
+  cursor: pointer;
+  margin: 4px;
+  font-weight: 700;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#main #main_frame #answer_frame .ans_peace_frame .radio_frame label input {
+  cursor: pointer;
+}
+
+#main #main_frame #answer_frame #submit_btn {
+  cursor: pointer;
+  margin: 10px;
+  padding: 10px 30px 10px 30px;
+  border: none;
   border-radius: 20px;
+  background: linear-gradient(145deg, #152f49, #12283d);
+  -webkit-box-shadow: 5px 5px 10px #08121b, -5px -5px 10px #20466d;
+          box-shadow: 5px 5px 10px #08121b, -5px -5px 10px #20466d;
+  color: #F9F2E4;
+  font-size: 93%;
+  font-weight: 600;
 }
 
-#answer_frame #answer_form_frame {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+#main #main_frame #answer_frame #submit_btn:hover {
+  background: #142C44;
+  -webkit-box-shadow: inset 5px 5px 10px #08121b, inset -5px -5px 10px #20466d;
+          box-shadow: inset 5px 5px 10px #08121b, inset -5px -5px 10px #20466d;
 }
 
-.ans_peace_frame {
-  margin: 10px 0 10px 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+#main #main_frame #answer_frame #submit_btn:focus {
+  outline: 0;
 }
 
-.ans_peace_frame .radio_frame {
-  margin-left: 5px;
-}
-
-#content_frame {
-  margin-left: 20px;
-  padding: 10px;
-  width: 40%;
-  height: 90%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-#content_frame #score_frame {
-  width: 70%;
-  height: 60%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-#content_frame #score_frame #score_text_frame {
-  padding: 20px;
-  background-color: rgba(255, 255, 255, 0.6);
-  border: solid 2px rgba(255, 255, 255, 0.5);
-  border-radius: 20px;
+#main #main_frame #socre_frame {
+  margin-bottom: 20px;
+  padding: 5px 10px 5px 10px;
+  border-radius: 10px;
+  background: linear-gradient(145deg, #12283d, #152f49);
+  -webkit-box-shadow: 5px 5px 10px #08121b, -5px -5px 10px #20466d;
+          box-shadow: 5px 5px 10px #08121b, -5px -5px 10px #20466d;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -184,101 +236,63 @@ label {
   -webkit-box-align: baseline;
       -ms-flex-align: baseline;
           align-items: baseline;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
-#content_frame #score_frame #score_text_frame #score {
-  color: #000000;
-  font-weight: 700;
+#main #main_frame #socre_frame #score {
   font-size: 70px;
+  font-weight: 700;
 }
 
-#content_frame #score_frame #score_text_frame #score_unit {
-  color: #000000;
+#main #main_frame #socre_frame #score_unit {
   font-weight: 700;
   font-size: 40px;
 }
 
-#content_frame #btn_frame {
-  width: 80%;
-  height: 30%;
+#main #main_frame #btn_frame {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
-#content_frame #btn_frame #scoring_btn {
+#main #main_frame #btn_frame .br_btn {
   cursor: pointer;
-  color: #ffffff;
-  font-size: 20px;
-  font-weight: 700;
-  width: auto;
-  height: auto;
-  padding: 10px 40px 10px 40px;
-  margin: 10px 10px 10px 10px;
+  margin: 10px 20px 20px 20px;
+  padding: 10px 30px 10px 30px;
   border: none;
-  background: -webkit-gradient(linear, left top, left bottom, from(#91d77d), to(#35bfa0));
-  background: linear-gradient(#91d77d, #35bfa0);
   border-radius: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-#content_frame #btn_frame #scoring_btn:hover {
-  background: -webkit-gradient(linear, left top, left bottom, from(#35bfa0), to(#91d77d));
-  background: linear-gradient(#35bfa0, #91d77d);
-}
-
-#content_frame #btn_frame #scoring_btn:focus {
-  outline: 0;
-}
-
-#content_frame #btn_frame #redo_btn {
-  cursor: pointer;
-  color: #ffffff;
-  font-size: 20px;
+  background: linear-gradient(145deg, #152f49, #12283d);
+  -webkit-box-shadow: 5px 5px 10px #08121b, -5px -5px 10px #20466d;
+          box-shadow: 5px 5px 10px #08121b, -5px -5px 10px #20466d;
+  font-size: 97%;
   font-weight: 700;
-  width: auto;
-  height: auto;
-  padding: 10px 40px 10px 40px;
-  margin: 10px 10px 10px 10px;
-  border: none;
-  background: -webkit-gradient(linear, left top, left bottom, from(#7dd4d7), to(#3565bf));
-  background: linear-gradient(#7dd4d7, #3565bf);
-  border-radius: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
-#content_frame #btn_frame #redo_btn:hover {
-  background: -webkit-gradient(linear, left top, left bottom, from(#3565bf), to(#7dd4d7));
-  background: linear-gradient(#3565bf, #7dd4d7);
+#main #main_frame #btn_frame .br_btn:hover {
+  background: #142C44;
+  -webkit-box-shadow: inset 5px 5px 10px #08121b, inset -5px -5px 10px #20466d;
+          box-shadow: inset 5px 5px 10px #08121b, inset -5px -5px 10px #20466d;
 }
 
-#content_frame #btn_frame #redo_btn:focus {
+#main #main_frame #btn_frame .br_btn:focus {
   outline: 0;
 }
 
 #footer {
+  margin-bottom: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -291,15 +305,6 @@ label {
 }
 
 #footer #footer_frame {
-  padding: 10px 30px 10px 30px;
-  margin: 10px 0 10px 0;
-  background: rgba(255, 255, 255, 0.25);
-  -webkit-box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-          box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
-  border: solid 1px rgba(255, 255, 255, 0.5);
-  border-radius: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -313,10 +318,5 @@ label {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-}
-
-.anker {
-  color: #ffffff;
-  font-weight: 700;
 }
 /*# sourceMappingURL=scoring.css.map */
