--- a/docs/style/scoring/scoring.scss
+++ b/docs/style/scoring/scoring.scss
@@ -1,196 +1,188 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
-label {
-    white-space: nowrap;
-    cursor: pointer;
+// カラーパレットはこれ
+// https://picular.co/darkmode
+a{
+    text-decoration: none;
+    color: #14A4AC;
+    font-size: 20px;
+    font-weight: 700;
 }
 #body {
     font-family: 'Noto Sans JP', sans-serif;
-	height: 100vh;
-    background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
-    background-size: 110% 110%;
-    color: #ffffff;
+    background-color: #142C44;
+    color: #F9F2E4;
 }
 #header{
+    margin: 25px 0 35px 0;
     display: flex;
     justify-content: center;
     align-items: center;
     #header_frame{
         padding: 10px 30px 10px 30px;
-        margin: 10px 0 10px 0;
-        background: rgba( 255, 255, 255, 0.25 );
-        box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-        backdrop-filter: blur( 4px );
-        -webkit-backdrop-filter: blur( 4px );
-        border: solid 1px rgba( 255, 255, 255, 0.5 );
-        border-radius: 20px;
+        @media screen and (max-width: 480px) {
+            padding: 10px 20px 10px 20px;
+        }
+        border-radius: 10px;
+        background: #142C44;
+        box-shadow:  6px 6px 12px #08121b,
+                    -6px -6px 12px #20466d;
         display: flex;
         justify-content: center;
         align-items: center;
+        #header_title{
+            width: 400px;
+            @media screen and (max-width: 480px) {
+                width: 300px;
+            }
+            filter: drop-shadow(0px 0px 6px rgba(0,255,0,0.6));
+        }
     }
 }
 #main{
-    width: 100vw;
-    height: 70vh;
+    margin: 35px 0 35px 0;
     display: flex;
     justify-content: center;
     align-items: center;
     #main_frame{
-        width: 80%;
-        height: 90%;
-        padding: 10px 30px 10px 30px;
-        margin: 10px 0 10px 0;
-        background: rgba( 255, 255, 255, 0.25 );
-        box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-        backdrop-filter: blur( 4px );
-        -webkit-backdrop-filter: blur( 4px );
-        border: solid 1px rgba( 255, 255, 255, 0.5 );
-        border-radius: 20px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: row;
-    }
-}
-#answer_frame{
-    width: auto;
-    height: 95%;
-    overflow:scroll;
-    background-color: rgba( 255, 255, 255, 0.6);
-    margin: 15px;
-    padding: 10px;
-    color: #000000;
-    font-size: 20px;
-    font-weight: 800;
-    border: solid 2px rgba( 255, 255, 255, 0.5 );
-    border-radius: 20px;
-    #answer_form_frame{
+        width: 90%;
+        max-width: 400px;
+        border-radius: 10px;
+        background: #142C44;
+        box-shadow:  10px 10px 15px #08121b,
+                    -10px -10px 15px #20466d;
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
-    }
-}
-.ans_peace_frame{
-    margin: 10px 0 10px 0;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-direction: column;
-    .radio_frame{
-        margin-left: 5px;
-    }
-}
-#content_frame{
-    margin-left: 20px;
-    padding: 10px;
-    width: 40%;
-    height: 90%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: column;
-    #score_frame{
-        width: 70%;
-        height: 60%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        #score_text_frame{
-            padding: 20px;
-            background-color: rgba( 255, 255, 255, 0.6);
-            border: solid 2px rgba( 255, 255, 255, 0.5 );
-            border-radius: 20px;
+        #examin_info_frame{
+            margin-top: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            .examin_info{
+                font-size: 20px;
+                font-weight: 700;
+            }
+        }
+        #answer_frame{
+            margin: 10px 0 20px 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            .ans_peace_frame{
+                margin: 10px 0 10px 0;
+                padding: 10px;
+                border-radius: 10px;
+                background: #142C44;
+                box-shadow: inset 5px 5px 10px #08121b,
+                            inset -5px -5px 10px #20466d;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                .radio_frame{
+                    font-weight: 700;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex-direction: row;
+                    label{
+                        cursor: pointer;
+                        margin: 4px;
+                        font-weight: 700;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        flex-direction: column;
+                        input{
+                            cursor: pointer;
+                        }
+                    }
+                }
+            }
+            #submit_btn{
+                cursor: pointer;
+                margin: 10px;
+                padding: 10px 30px 10px 30px;
+                border: none;
+                border-radius: 20px;
+                background: linear-gradient(145deg, #152f49, #12283d);
+                box-shadow:  5px 5px 10px #08121b,
+                            -5px -5px 10px #20466d;
+                color: #F9F2E4;
+                font-size: 93%;
+                font-weight: 600;
+                &:hover{
+                    background: #142C44;
+                    box-shadow: inset 5px 5px 10px #08121b,
+                                inset -5px -5px 10px #20466d;
+                }
+                &:focus {
+                    outline:0;
+                }
+            }
+        }
+        #socre_frame{
+            margin-bottom: 20px;
+            padding: 5px 10px 5px 10px;
+            border-radius: 10px;
+            background: linear-gradient(145deg, #12283d, #152f49);
+            box-shadow:  5px 5px 10px #08121b,
+                        -5px -5px 10px #20466d;
             display: flex;
             justify-content: center;
             align-items: baseline;
+            flex-direction: row;
             #score{
-                color: #000000;
-                font-weight: 700;
                 font-size: 70px;
+                font-weight: 700;
             }
             #score_unit{
-                color: #000000;
                 font-weight: 700;
                 font-size: 40px;
             }
         }
-        
-    }
-    #btn_frame{
-        width: 80%;
-        height: 30%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        #scoring_btn{
-            cursor: pointer;
-            color: #ffffff;
-            font-size: 20px;
-            font-weight: 700;
-            width: auto;
-            height: auto;
-            padding: 10px 40px 10px 40px;
-            margin: 10px 10px 10px 10px;
-            border: none;
-            background: linear-gradient(rgb(145,215,125), rgb(53,191,160));
-            border-radius: 20px;
+        #btn_frame{
             display: flex;
             justify-content: center;
-            align-items: center;
-            &:hover{
-                background: linear-gradient(rgb(53,191,160), rgb(145,215,125));
-            }
-            &:focus {
-                outline:0;
-            }
-        }
-        #redo_btn{
-            cursor: pointer;
-            color: #ffffff;
-            font-size: 20px;
-            font-weight: 700;
-            width: auto;
-            height: auto;
-            padding: 10px 40px 10px 40px;
-            margin: 10px 10px 10px 10px;
-            border: none;
-            background: linear-gradient(rgb(125, 212, 215), rgb(53, 101, 191));
-            border-radius: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            &:hover{
-                background: linear-gradient(rgb(53, 101, 191), rgb(125, 212, 215));
-            }
-            &:focus {
-                outline:0;
+            align-items: baseline;
+            flex-direction: row;
+            .br_btn{
+                cursor: pointer;
+                margin: 10px 20px 20px 20px;
+                padding: 10px 30px 10px 30px;
+                border: none;
+                border-radius: 20px;
+                background: linear-gradient(145deg, #152f49, #12283d);
+                box-shadow:  5px 5px 10px #08121b,
+                            -5px -5px 10px #20466d;
+                font-size: 97%;
+                font-weight: 700;
+                &:hover{
+                    background: #142C44;
+                    box-shadow: inset 5px 5px 10px #08121b,
+                                inset -5px -5px 10px #20466d;
+                }
+                &:focus {
+                    outline:0;
+                }
             }
         }
     }
 }
 
+
 #footer{
+    margin-bottom: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     #footer_frame{
-        padding: 10px 30px 10px 30px;
-        margin: 10px 0 10px 0;
-        background: rgba( 255, 255, 255, 0.25 );
-        box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-        backdrop-filter: blur( 4px );
-        -webkit-backdrop-filter: blur( 4px );
-        border: solid 1px rgba( 255, 255, 255, 0.5 );
-        border-radius: 20px;
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
     }
-}
-
-.anker{
-    // text-decoration: none;
-    color: #ffffff;
-    font-weight: 700;
 }
